--- a/products/cryptogate/deposit.mdx
+++ b/products/cryptogate/deposit.mdx
@@ -172,8 +172,7 @@ description: "Приём платежей в криптовалютах"
         "project_id": "preview",
         "crypto_network": "TRX",
         "crypto_asset": "USDT",
-        "user": { "user_id": "123" },
-        "url_callback": "https://merchant.example.com/cryptogate/callback"
+        "user": { "user_id": "123" }
       }'
     ```
  
@@ -238,8 +237,7 @@ description: "Приём платежей в криптовалютах"
         "user": { "user_id": "123" },
         "amount": { "amount": "10.00", "currency": "USD" },
         "crypto_network": "TRX",
-        "crypto_asset": "USDT",
-        "url_callback": "https://merchant.example.com/cryptogate/callback"
+        "crypto_asset": "USDT"
       }'
     ```
  
